<resources>
    <string name="app_name">Patit</string>
    <string name="title_pocket3">Pocket 3</string>
    <string name="title_pocket2">Pocket 2</string>
    <string name="title_pocket1">Pocket 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_your_pockets">My pockets</string>
    <string name="title_activity_select_new_element">Select element</string>
    <string name="update_pocket">Update this pocket</string>
    <string name="title">Pocket And Take IT !!!</string>
    <string name="username">User</string>
    <string name="usernameDefault">User</string>
    <string name="pass">Pass</string>
    <string name="email">e-mail</string>
    <string name="emailDefault">e-mail</string>
    <string name="passDefault">Pass</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logtext">Log your device </string>
    <string name="registertext">Not have a pocket? join now!!</string>
    <string name="allready">all ready</string>
    <string name="regtext">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="titleRegister">Insert your data acount</string>
    <string name="passRegister">Insert your pass (min 6 char)</string>
    <string name="emailRegister">Insert your email</string>
    <string name="repassRegister">Insert your pass again (min 6 char)</string>
    <string name="continueRegister">Continue</string>
    <string name="nextbar">Next</string>
    <string name="inyourpockets">What do you have in your pockets???</string>
    <string name="yourpocketshome">Your pockets</string>
    <string name="randompocketshome">Random pockets</string>
    <string name="featuredpocketshome">Featured pockets</string>
    <string name="sponsoredpocketshome">Sponsored pockets</string>
    <string name="yourpocketssubhome">Look in your pockets</string>
    <string name="randompocketssubhome">Discover people\'s pockets</string>
    <string name="featuredpocketssubhome">Most interesting pockets</string>
    <string name="sponsoredpocketssubhome">they give me the money :P</string>
    <string name="title_activity_home_pockets">Your Pockets</string>
    <string name="title_activity_info_user">User info</string>
    <string name="title_fragment_yourpockets">Your pockets</string>
    <string name="title_fragment_randompockets">Random pockets</string>
    <string name="title_fragment_featuredpockets">Featured pockets</string>
    <string name="title_fragment_sponsoredpockets">Sponsored pockets</string>
    <string name="pocket">Pocket</string>
    <string name="spocket">pocket</string>
    <string name="pockets">pockets</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="newpocket">New pocket</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="shareicon">Share</string>
    <string name="shareicondespl">Share</string>
    <string name="long_press">Long Press</string>
    <string name="delete">Delete</string>
    <string name="fragment_context_menu_msg">fragment menu</string>
    <string name="title_activity_new_pocket">NewPocketActivity</string>
    <string name="title_activity_random_pockets">Random pockets</string>
    <string name="title_activity_featured_pockets">Featured pockets</string>
    <string name="title_activity_sponsored_pockets">Sponsored pockets</string>
    <string name="new_pocket">New Pocket</string>
    <string name="newpocketdefaultname">your pocket name</string>
    <string name="descriptionnewpocketdefault">Pocket\'s description</string>
    <string name="themenewpocketdefault">Pocket\'s theme</string>
    <string name="newitem">Add item</string>
    <string name="miscellaneous_theme">Miscelaneus</string>
    <string name="music_theme">Music</string>
    <string name="sport_theme">Sport</string>
    <string name="cinema_theme">Cinema</string>
    <string name="theme">Theme</string>
    <string name="help">Help</string>
    <string name="userprofile">Profile</string>
    <string name="img_type">Image</string>
    <string name="msc_type">Music</string>
    <string name="txt_type">Text</string>
    <string name="url_type">Url</string>
    <string name="comments">Comments</string>
    <string name="description">Description</string>
    <string name="preferences_generals">General preferences </string>
    <string name="music">Music</string>
    <string name="accept">Accept</string>
    <string name="text">Text</string>
    <string name="textinyourpocket">Write a text to save in your pocket:</string>
    <string name="urlinyourpocket">Write a url to save in your pocket:</string>
    <string name="defaulttextinyourpocket">Write here your text</string>
    <string name="defaulturlinyourpocket">Write here your url</string>
    <string name="URL">URL</string>
    <string name="dowloading">Downloading</string>
    <string name="dowloadingtext">Connection to serer, please wait</string>
    <string name="comment">Comment</string>
    <string name="downloaded">Download finish</string>
    <string name="writecomment">Write your comment:</string>
    <string name="writecommentdefault">What do you think about this pocket?</string>
    <string name="newobject">New Object</string>
    <string name="writenewobjectname">Write object\'s name:</string>
    <string name="newnameobjectnamedefault">How do your object name?</string>
    <string name="writenewdescriptionobject">Write object\'s description:</string>
    <string name="writenewdescriptionobjectdefault">Add a description here</string>
    <string name="json_status_send_vote_OK">The voted has been sent correctly</string>
    <string name="json_status_send_vote_KO">The voted hasn\'t been sent, try again! </string>
    <string name="json_status_send_vote_changed_KO">You already have voted this pocket</string>
    <string name="json_status_send_vote_changed_OK">The voted has been canged correctly</string>
    <string name="deletepocket">Your pocket and content have been deleted</string>
    <string name="deletepocketQuestion">Are you sure you want to delete pocket and his content?</string>
    <string name="deletepocketTitle">Delete this pocket?</string>
    <string name="deleteobjectTitle">Delete this object?</string>
    <string name="deleteobjectQuestion">Do you want remove this object for ever?</string>
    <string name="OkDialog">OK</string>
    <string name="CancelDialog">Cancel</string>
    <string name="nameDescPocket">Name : </string>
    <string name="usernameDescPock">User : </string>
    <string name="votesDescPock">Votes : </string>
    <string name="createDateDescPocket">Creation date : </string>
    <string name="typeDescPocket">Theme : </string>
    <string name="numberObjectsDescPocket">Number of object : </string>
    <string name="numberCommentsDescPocket">Number of comments : </string>
    <string name="descDescObject">Description : </string>
    <string name="URLDescObject">URL : </string>
    <string name="nameDescObject">Name : </string>
    <string name="usernameDescObject">User : </string>
    <string name="createDateDescObject">Create date : </string>
    <string name="dateLastModDescObject">Last mod. date : </string>
    <string name="sendComment">Send it!!!</string>
    <string name="featured_OK">you follow this pocket</string>
    <string name="featured_KO">Action has failed, try again</string>
    <string name="unfeatured">you unfollow this pocket</string>
    <string name="user">User</string>
    <string name="nickInfoUser">Nick : </string>
    <string name="emailInfo">Email : </string>
    <string name="regDateInfo">Reg. Date : </string>
    <string name="nPocketInfo">Number of pockets : </string>
    <string name="autoReloadPref">Auto reload </string>
    <string name="autoReloadSumPref">Auto reload the info from server</string>
    <string name="storePref">Delete user info</string>
    <string name="storeSumPref">Delete user information from the app</string>
    <string name="deleteInfoTitle">Delete user info from app</string>
    <string name="deleteInfoQuestion">Are you sure? The app remove all the info from this device</string>
    <string name="store_preferences">Store preferences</string>
    <string name="preferences_personal">Personal preferences</string>
    <string name="vibratePref">Vibrate on tocuh</string>
    <string name="vibrateSumPref">The device vibrate when you do some actions</string>
    <string name="soundPref">Sound on tocuh</string>
    <string name="soundSumPref">The device sound when you do some actions</string>
    <string name="title_activity_select_new_element_type">Select item type</string>
    <string name="newcomment">Comment</string>
    <string name="title_activity_preferences">Preferences Patit</string>
    <string name="json_status_pocket_create_OK">The pocket has been created OK :)</string>
    <string name="json_status_pocket_create_KO">:( Sorry but the pocket hasn\'t been created. Try again</string>
    <string name="json_status_user_create_OK">The user has been registered OK :)</string>
    <string name="json_status_user_create_KO">:( Sorry but the user hasn\'t been registered. Try again or test your connection</string>
    <string name="json_status_comment_create_OK">The comment has been sent OK :)</string>
    <string name="json_status_comment_create_KO">:( Sorry but the comment hasn\'t been sent. Try again or test your connection</string>
    <string name="json_status_pocket_update_OK">The pocket\'s information has been update</string>
    <string name="json_status_pocket_update_KO">:( Sorry but the pocket hasn\'t been updated. Try again or test your connection</string>
    <string name="NO_INTERNET">Your device is not connected to internet.\n Connect the device</string>
    <string name="NO_USER_PREF">Sorry, but patit hasn\'t a user in memory, go to preferences and delete stored info.</string>
    <string name="SERVER_ERROR">Sorry, there is a server error, try later again</string>
    <string name="title_activity_description_pocket">Pocket description</string>
    <string name="title_activity_description_object">Object description</string>
    <string name="uploading">uploading file ... </string>
    <string name="downloading">downloading file ... </string>
    <string name="elements">elem.</string>
    <string name="title_activity_view_object">Object view</string>
    <string name="deleteobject">The object has been deleted</string>
    <string name="loadingObject">Loading the data, please wait ...</string>
    <string name="saveicon">download</string>
    <string name="completedownload">A file has been dowloaded. See in your media visor</string>
    <string name="dialogFileRoutePref">where you want to save the file in your memory/SDcard ?</string>
    <string name="fileRoutePref">Downloads route</string>
    <string name="fileRouteSumPref">The folder where the app download the files. (Don\'t write \'/\' elements)</string>
    <string name="extNavigatorPref">External navigator</string>
    <string name="extNavigatorSumPref">Do you want use a external navigator to open the URL objects?</string>
    <string name="brokenobject">The object is broken. If not work, please delete them :()</string>
    <string name="hashttp">Don\'t write http. Ex: www.google.es</string>
    <string name="defaulttextinyURLdefault">Write a URL. Ex: www.google.es</string>
    <string name="defaulttextinyTextdefault">Write a text. You can write some notes, some poems or some lyrics. You can use html code to decorate your text!!</string>
    <string name="info_preferences">Information</string>
    <string name="aboutTitlePref">About Patit</string>
    <string name="aboutTitleSumPref">Information about the app Patit</string>
</resources>