<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_item_share_action_provider_action_bar"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/shareicon"/>
    <item
        android:id="@+id/menu_item_share_action_provider_overflow"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="never"
        android:title="@string/shareicondespl"
        />
     <item
        android:id="@+id/saveicon"
        android:icon="@drawable/saveicon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/saveicon"/>
     <item
        android:id="@+id/descicon"
        android:icon="@drawable/infoicon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/details"/>
</menu>
