<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroundregister" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="#FFBB33"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/titleRegister"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/regtext"
            android:textAppearance="?android:attr/listSeparatorTextViewStyle" />

        <TextView
            android:id="@+id/line"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:paddingTop="5dip" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFBB33"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/cfgLblUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/editTextRegisterUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="9"
                            android:hint="@string/usernameDefault" />

                        <ImageButton
                            android:id="@+id/buttonCheck"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/accecpt_nav" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/cfgLblEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emailRegister" />

                    <EditText
                        android:id="@+id/editTextRegisterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/emailDefault"
                        android:inputType="textEmailAddress" />
                    <TextView
                        android:id="@+id/cfgLblPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passRegister" />

                    <EditText
                        android:id="@+id/editTextRegisterPass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/passDefault"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/cfgLblPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repassRegister" />

                    <EditText
                        android:id="@+id/editTextRegisterPass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/passDefault"
                        android:inputType="textPassword" >
                    </EditText>

                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/cfgBtnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/continueRegister" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>